--- a/index.html
+++ b/index.html
@@ -8,58 +8,14 @@
   </head>
   <body>
     <div class="container" id="container">
-        <div class="conatiner-body"></div>
-        <div class="info">
-            <span class="sheeping">Free 2 Day Sheeping</span>
-            <span>Total : DKK 360.00</span>
-
-        </div>
-        <button class="add-btn">+Add to Cart</button>
-<!-- 
-        <div class="accordion">
-          <input type="radio" name="accordion" id="section1" />
-          <label class="accordion-label" for="section1">
-            <div>
-              1 Pair
-              <p>DKK 195.00</p>
-            </div>
-    
-            <p>50% OFF</p></label
-          >
-          <div class="accordion-content">
-            <table>
-              <thead>
-                <th>
-                  <tr>
-                    <td>Size</td>
-                    <td>Colour</td>
-                  </tr>
-                </th>
-              </thead>
-    
-              <tbody>
-                <tr>
-                  <td>
-                    <select name="size" id="size" class="custom-select">
-                      <option value="S">S</option>
-                      <option value="M">M</option>
-                      <option value="L">L</option>
-                    </select>
-                  </td>
-                  <td>
-                    <select name="colour" id="colour">
-                      <option value="red">Red</option>
-                      <option value="green">Green</option>
-                      <option value="blue">Blue</option>
-                    </select>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div> -->
+      <div class="title">Bundle & Save</div>
+      <div class="conatiner-body"></div>
+      <div class="info">
+        <span class="sheeping">Free 2 Day Sheeping</span>
+        <span>Total : DKK 360.00</span>
+      </div>
+      <button class="add-btn">+Add to Cart</button>
     </div>
-
 
     <script src="script.js"></script>
   </body>
